.feat join_group/send_invitation + fix reset password (à compléter)
