# go/docs/swagger.yaml
@@ -1,6 +1,66 @@
 definitions:
+  activity.ErrorResponse:
+    properties:
+      error:
+        type: string
+    type: object
+  destinations.ErrorResponse:
+    properties:
+      error:
+        type: string
+    type: object
   gin.H:
     additionalProperties: {}
+    type: object
+  models.Activity:
+    properties:
+      address:
+        type: string
+      destination:
+        type: string
+      id:
+        description: gorm.Model
+        type: integer
+      image:
+        type: string
+      latitude:
+        type: number
+      longitude:
+        type: number
+      name:
+        type: string
+      price:
+        type: number
+      status:
+        type: integer
+    type: object
+  models.Destination:
+    properties:
+      activities:
+        items:
+          $ref: '#/definitions/models.Activity'
+        type: array
+      id:
+        description: gorm.Model
+        type: integer
+      image:
+        type: string
+      name:
+        type: string
+    type: object
+  models.Voyage:
+    properties:
+      activities:
+        items:
+          $ref: '#/definitions/models.Activity'
+        type: array
+      date:
+        type: string
+      destination:
+        type: string
+      id:
+        description: gorm.Model
+        type: integer
     type: object
   requests.EmailRequest:
     properties:
@@ -51,6 +111,11 @@ definitions:
     - password
     - username
     type: object
+  voyages.ErrorResponse:
+    properties:
+      error:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
@@ -92,6 +157,481 @@ paths:
       summary: Allow you to register as a new User
       tags:
       - Auth
+  /api/activity/images:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Upload file
+      parameters:
+      - description: account image
+        in: formData
+        name: image
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Activity'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/activity.ErrorResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/activity.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/activity.ErrorResponse'
+      summary: Upload image
+      tags:
+      - Activity
+  /api/destination/{id}/activities/verify/{name}:
+    get:
+      consumes:
+      - application/json
+      description: verify by json activity name
+      parameters:
+      - description: Destination ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Activity Name
+        in: path
+        name: name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Destination'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+      summary: Verify an activity Name
+      tags:
+      - Destinations
+  /api/destinations:
+    get:
+      consumes:
+      - application/json
+      description: Get Destinations
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Destination'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+      summary: List Destinations
+      tags:
+      - Destinations
+    post:
+      consumes:
+      - application/json
+      description: Add by JSON destination
+      parameters:
+      - description: Add destination
+        in: body
+        name: destination
+        required: true
+        schema:
+          $ref: '#/definitions/models.Destination'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Destination'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+      summary: Add a destination
+      tags:
+      - Destinations
+  /api/destinations/{id}:
+    get:
+      consumes:
+      - application/json
+      description: get string by ID
+      parameters:
+      - description: Destination ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Destination'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+      summary: Show a destination
+      tags:
+      - Destinations
+  /api/destinations/{id}/activity:
+    post:
+      consumes:
+      - application/json
+      description: add by json activity destination
+      parameters:
+      - description: Destination ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Activity to add
+        in: body
+        name: activity
+        required: true
+        schema:
+          $ref: '#/definitions/models.Activity'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Destination'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+      summary: Add a activity to destination
+      tags:
+      - Destinations
+  /api/destinations/delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete by destination ID
+      parameters:
+      - description: Destination ID
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Destination'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+      summary: Delete a destination
+      tags:
+      - Destinations
+  /api/destinations/update/{id}:
+    patch:
+      consumes:
+      - application/json
+      description: Update by json destination
+      parameters:
+      - description: Destination ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update Destination
+        in: body
+        name: destination
+        required: true
+        schema:
+          $ref: '#/definitions/models.Destination'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Destination'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/destinations.ErrorResponse'
+      summary: Update a destination
+      tags:
+      - Destinations
+  /api/voyages:
+    get:
+      consumes:
+      - application/json
+      description: Get Voyages
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Voyage'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/voyages.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/voyages.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/voyages.ErrorResponse'
+      summary: List Voyages
+      tags:
+      - Voyages
+    post:
+      consumes:
+      - application/json
+      description: Add by JSON voyage
+      parameters:
+      - description: Add voyage
+        in: body
+        name: voyage
+        required: true
+        schema:
+          $ref: '#/definitions/models.Voyage'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Voyage'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/voyages.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/voyages.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/voyages.ErrorResponse'
+      summary: Add a voyage
+      tags:
+      - Voyages
+    put:
+      consumes:
+      - application/json
+      description: Update a trip by ID
+      parameters:
+      - description: Voyage data
+        in: body
+        name: voyage
+        required: true
+        schema:
+          $ref: '#/definitions/models.Voyage'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Voyage'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/voyages.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/voyages.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/voyages.ErrorResponse'
+      summary: Update a trip
+      tags:
+      - Voyages
+  /api/voyages/{id}:
+    get:
+      consumes:
+      - application/json
+      description: get string by ID
+      parameters:
+      - description: Voyages ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Voyage'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/voyages.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/voyages.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/voyages.ErrorResponse'
+      summary: Show a voyage
+      tags:
+      - Voyages
+  /api/voyages/delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete by voyage ID
+      parameters:
+      - description: Voyage ID
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Voyage'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/voyages.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/voyages.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/voyages.ErrorResponse'
+      summary: Delete a voyage
+      tags:
+      - Voyages
+  /api/voyages/update/{id}:
+    patch:
+      consumes:
+      - application/json
+      description: Update by json destination
+      parameters:
+      - description: Voyage ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update Voyage
+        in: body
+        name: voyage
+        required: true
+        schema:
+          $ref: '#/definitions/models.Voyage'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Voyage'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/voyages.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/voyages.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/voyages.ErrorResponse'
+      summary: Update a voyage
+      tags:
+      - Voyages
   /forgotten_password:
     post:
       consumes:
@@ -131,6 +671,47 @@ paths:
         passe
       tags:
       - Auth
+  /join_group:
+    post:
+      consumes:
+      - application/json
+      description: Envoie un mail d'invitation afin de de rejoindre un groupen de
+        voyage
+      parameters:
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Invitation envoyée
+          schema:
+            $ref: '#/definitions/gin.H'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "404":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/gin.H'
+      security:
+      - Bearer: []
+      summary: Rejoindre un groupe de voyage
+      tags:
+      - Voyages
   /login:
     post:
       consumes:
@@ -244,6 +825,12 @@ paths:
       description: Permet à l'utilisateur de réinitialiser son mot de passe en utilisant
         un jeton de réinitialisation valide.
       parameters:
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Données pour réinitialiser le mot de passe
         in: body
         name: requests.ResetPasswordRequest
@@ -263,6 +850,8 @@ paths:
           description: Erreur interne du serveur
           schema:
             $ref: '#/definitions/gin.H'
+      security:
+      - Bearer: []
       summary: Réinitialiser le mot de passe
       tags:
       - Auth
@@ -304,7 +893,7 @@ paths:
             $ref: '#/definitions/gin.H'
       security:
       - Bearer: []
-      summary: Rejoindre un groupe de voyage
+      summary: Invitation groupe de voyage
       tags:
-      - Voyage
+      - Voyages
 swagger: "2.0"
